Fix scrollbar style

--- a/src/components/Board/Cards/style.css
+++ b/src/components/Board/Cards/style.css
@@ -10,10 +10,7 @@
   flex: 1;
   max-height: 100%;
   padding-right: 12px;
-  scrollbar-width: thin;
-  scrollbar-track-color: transparent;
-  scrollbar-color: var(--scrollbar-track-bg) transparent;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
